--- a/case_study1_airline_safety.Rmd
+++ b/case_study1_airline_safety.Rmd
@@ -1,21 +1,51 @@
 # Case study #1 : Airline Safety data
 
-    ```{r setup, include=FALSE}
-    knitr::opts_chunk$set(include = FALSE)
-    library(ggplot2)
-    library(ggpubr)
-    library(haven)
-    library(dplyr)
-    ```
+```{r setup-airlines, include=FALSE}
+knitr::opts_chunk$set(include = FALSE)
+library(ggplot2)
+library(ggpubr)
+library(haven)
+library(dplyr)
+library(readr)
+library(tidyr)
+```
 
 ## Setup
 
-This case study is based on an [article](https://fivethirtyeight.com/features/should-travelers-avoid-flying-airlines-that-have-had-crashes-in-the-past/) from [FiveThirtyEight](https://fivethirtyeight.com/) published by [Nate Silver](https://fivethirtyeight.com/contributors/nate-silver/). Using [data](https://github.com/fivethirtyeight/data/tree/master/airline-safety) from the [Aviation Safety Network’s database](https://aviation-safety.net/index.php), we want to see if past safety records can predict future risk of accidents. In other words "Should Travelers Avoid Flying Airlines That Have Had Crashes in the Past?"
+This case study is based on an [article](https://fivethirtyeight.com/features/should-travelers-avoid-flying-airlines-that-have-had-crashes-in-the-past/) from [FiveThirtyEight](https://fivethirtyeight.com/) published by [Nate Silver](https://fivethirtyeight.com/contributors/nate-silver/). Using [data](https://github.com/fivethirtyeight/data/tree/master/airline-safety)^[The original dataset has been reshaped for the purpose of the course.] from the [Aviation Safety Network’s database](https://aviation-safety.net/index.php), we want to see if past safety records can predict future risk of accidents. In other words "Should Travelers Avoid Flying Airlines That Have Had Crashes in the Past?"
 
-    ```{r include = FALSE}
-    ## need to find the best way to let students download the data 
-    data=read.csv2("~/Documents/TA_Econometrics/Case_studies/airline_safety/data-master/airline-safety/airline-safety_long.csv", sep = ";")
-    ```
+```{r}
+## read the data from Fivethirtyeight and reshape it  
+# data=read_csv("https://raw.github.com/fivethirtyeight/data/master/airline-safety/airline-safety.csv")
+
+# # reshape the data in long format to play with dpylr
+# data_long = gather(data, type, value, incidents_85_99:fatalities_00_14)
+# 
+# substrRight <- function(x, n){
+#   substr(x, nchar(x)-n+1, nchar(x))
+# }
+# removelast_n <- function(x, n){
+#   substr(x, 1, nchar(x)-(n+1))
+# }
+# 
+# data_long$period = substrRight(data_long$type,5)
+# data_long$type = removelast_n(data_long$type,5)
+# 
+# data = data_long
+# 
+# data$type = as.factor(data$type)
+# data$period = as.factor(ifelse(data$period == "85_99", "1985_1999", "2000_2014"))
+# 
+# write.csv2(data,
+#            file = "~/Documents/TA_Econometrics/Repo_github/ScPoEconometrics/airline-safety.csv",
+#            row.names = F)
+```
+
+To load the dataset, you can run the following command (NB : it uses the `readr` package)
+```{r include=TRUE}
+# load data from our github repo 
+data=read_csv("https://raw.github.com/ScPoEcon/ScPoEconometrics/airline-safety.csv")
+```
     
 ## Exploring the data
 
@@ -34,12 +64,12 @@ The dataset contains the safety records of major commercial airlines over the pa
     1. What defines an observation in our case (no need to code) ? 
     
 1. Having a  closer look
-    1. How does the dataset look like ? Have a look to the first 5 observations, and the bottom 5. 
+    1. How does the dataset look like : have a look to the first 5 observations, and the bottom 5. 
     ```{r}
     head(data)
     tail(data)
     ```
-    1. What are the different values of the "type" variable ? Same question for the "period" variable.
+    1. What are the different values of the `type` variable ? Same question for the `period variable.
     ```{r}
     table(data$type, useNA = "ifany")
     table(data$period, useNA = "ifany")
@@ -49,55 +79,52 @@ The dataset contains the safety records of major commercial airlines over the pa
     sum(is.na(data))
     apply(data, 2, function(x) any(is.na(x)))
     ```
-    1. The variable "avail_seat_km_per_week" corresponds to the number of seats multiplied by the number of kilometers the airline flies in a week. In your opinion, why this variable could be important for future analysis ?
+    1. The `avail_seat_km_per_week` variable corresponds to the number of seats multiplied by the number of kilometers the airline flies in a week. In your opinion, why could this variable be important for future analysis ?
 
 ## Analysis
 
-1. What are the mean value of the number of incidents by type and period ? Same for the standard deviation ?
-    ```{r}
-    
-    data %>%
-      group_by(period, type) %>% 
-      summarise(mean_fatal_by_period = mean(value), 
-                sd_fatal_by_period = sd(value))
-    ```
+1. What are the mean value of the number of incidents by `type` and `period` ? Same for the standard deviation ?
+```{r}
+data %>%
+  group_by(period, type) %>% 
+  summarise(mean_fatal_by_period = mean(value), 
+            sd_fatal_by_period = sd(value))
+```
 1. Interpretation : Overall, what happened between the two periods? What can we say about the relative value of the standard deviation compared to the mean? Do you find the mean value meaningfull in this case? 
 
 1. Propose a vizualization showing the evolution of the number of fatal accidents between the two periods. 
-    ```{r}
-    ggplot(subset(data, type != "fatalitie"), aes(x = period, y = value))+
-      geom_boxplot()+
-      facet_wrap(~type)
-      
-    
-    ```
-1. Over 2000-2014 period, what is the top 3 companies (meaning the worst companies) in terms of fatalities?
-    ```{r}
-    data %>% 
-      filter(type == "fatalitie" & period == "2000_2014") %>%
-      arrange(desc(value)) %>%
-      head(3)
-    ```
-1. Do the same taking into account the "avail_seat_km_per_week" variable? 
-    ```{r}
-    data %>% 
-      filter(type == "fatalitie" & period == "2000_2014") %>%
-      arrange(desc(value/avail_seat_km_per_week)) %>%
-      head(3)
-    ```
+```{r}
+ggplot(subset(data, type != "fatalities"), aes(x = period, y = value))+
+  geom_boxplot()+
+  facet_wrap(~type)
+```
+1. Over 2000-2014 period, what are the top 3 companies (meaning the worst companies) in terms of fatalities?
+```{r}
+data %>% 
+  filter(type == "fatalities" & period == "2000_2014") %>%
+  arrange(desc(value)) %>%
+  head(3)
+```
+1. Do the same taking into account the "avail_seat_km_per_week" variable? Was it predictable? 
+```{r}
+data %>% 
+  filter(type == "fatalities" & period == "2000_2014") %>%
+  arrange(desc(value/avail_seat_km_per_week)) %>%
+  head(3)
+```
 1. Bonus : Measuring a ratio of risk. Assume that, in your whole life, you will fly on average 2000 km every year during 50 years (~ 1 Paris - New-York every five years). 
-    1. The number of fatalities given in the dataset correspond to periods of 15 years. However the avail_seat_km_per_week variable is normalized by week. Create a new variable normalizing the fatalities values by week.  
+    1. The number of fatalities given in the dataset correspond to periods of 15 years. However the `avail_seat_km_per_week` variable is normalized by week, so create a new variable `value_by_week` normalizing values by week.  
     ```{r}
     data$value_by_week = data$value/(15*52)
     ```
-    1. Compute the risk you have to be in a "dead seat" during your life based on the safety records of each companies in the period 2000-2014. 
+    1. In a new dataset, create a `risk` variable giving the risk you have to be in a "dead seat" during your life based on the safety records of each company in the period 2000-2014. 
     ```{r}
     risk_data = data %>% 
-      filter(type == "fatalitie" & period == "2000_2014") %>%
-      mutate(risk = value_by_week/avail_seat_km_per_week*100000) %>%
+      filter(type == "fatalities" & period == "2000_2014") %>%
+      mutate(risk = value_by_week/avail_seat_km_per_week*2000*50) %>%
       select(airline,risk)
     ```
-    1. Express the risk in the terms "one chance over ... to die". What are the level of risk associated to the top 3 most dangerous companies? 
+    1. Express this risk as "one chance over ... to die" for each company. What are the level of risk associated to the top 3 most dangerous companies? 
     ```{r}
     risk_data %>% 
       mutate(risk_bis = 1/risk) %>%
