--- a/inst/tutorials/airline-safety/case_study1.Rmd
+++ b/inst/tutorials/airline-safety/case_study1.Rmd
@@ -42,10 +42,10 @@ This case study is based on an [article](https://fivethirtyeight.com/features/sh
 #            sep = ",")
 ```
 
-To load the dataset, you can run the following command (NB : it uses the `readr` package)
+To load the dataset, you can run the following command :
 ```{r include=TRUE, cache.comments=FALSE}
 # load data from our github repo
-data=read_csv("https://raw.github.com/pvilledieu/ScPoEconometrics/airline_safety/inst/datasets/airline-safety.csv")
+data=read.csv(system.file(package = "ScPoEconometrics", "datasets", "airline-safety.csv"))
 ```
 
 ## Exploring the data
